--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <!-- <h1 class="font-bold text-xl">Hello World</h1> -->
+    <!-- <h1 class="font-bold text-2xl">Hello World</h1> -->
     <div id="root">
-        <h1 class="title">Hello World</h1>
         <h1>me manish</h1>
     </div>
 <!-- <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
